test/corpus/fail/no-timer-canc.mo
=========
no-timer-canc.mo
=========

//MOC-FLAG -no-timer

import { cancelTimer } = "mo:⛔";

---

(source_file
  (line_comment)
  (import
    (obj_pat
      (pat_field
        (identifier)))
    (text_literal)))
